--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ p{margin-bottom:0}
 .f28,.f28 a{font-size:.373333rem}
 .f34{font-size:.453333rem}
 .f36,header h1{font-size:.48rem}
+.f40{font-size:.533333rem}
 .f42{font-size:.56rem}
 .f50{font-size:.666667rem}
 .f60{font-size:.8rem}
